--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 import '../styles/style.css';
 ---
 
@@ -21,6 +22,11 @@ import '../styles/style.css';
   <body>
     <main>
       <Header />
+      <!-- <div class="hero">
+        <img src="/src/assets/heroforside.png" alt="heroimg" />
+      </div> -->
+
+      <Footer />
     </main>
     <script src="../styles/style.css"></script>
   </body>
