--- a/src/pages/kalender.astro
+++ b/src/pages/kalender.astro
@@ -1,5 +1,6 @@
 ---
 import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 import '../styles/style.css';
 ---
 
@@ -21,6 +22,8 @@ import '../styles/style.css';
   <body>
     <main>
       <Header />
+
+      <Footer />
     </main>
   </body>
 </html>
