gospelkor i kbh og hcj

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/style.css';
+import '../styles/index.css';
 ---
 
 <!doctype html>
@@ -22,9 +23,46 @@ import '../styles/style.css';
   <body>
     <main>
       <Header />
-      <!-- <div class="hero">
+      <div class="hero">
         <img src="/src/assets/heroforside.png" alt="heroimg" />
-      </div> -->
+      </div>
+      <h1>GOSPELNET.DK</h1>
+      <hr />
+      <div class="gospelikbh">
+        <img src="/src/assets/forsidegospel.png" alt="billede1" />
+        <div>
+          <h2>GOSPELKOR I KØBENHAVN</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit anim id est laborum.
+          </p>
+          <a href=""> - Gå til tilmelding</a>
+        </div>
+      </div>
+      <div class="hanscjafsnit">
+        <img src="/src/assets/hanscj.png" alt="hanscj" />
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit voluptatibus
+          molestias vel debitis nisi commodi dolores quo tempore laudantium repellat. Expedita quos
+          unde modi aspernatur tempore. Corrupti exercitationem tempora itaque.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus accusantium laudantium
+          quibusdam asperiores, et explicabo architecto id excepturi qui molestias, vero voluptates
+          facere, suscipit unde saepe quas omnis iure tenetur pariatur doloribus deleniti amet
+          eligendi corporis? Ad adipisci hic porro. Quia placeat architecto, consectetur nam iste
+          cumque id iure ratione.
+        </p>
+        <h3>HANS CHRISTIAN JOCHIMSEN</h3>
+        <a href="https://www.gospelnet.dk/hans-christian-jochimsen/"
+          >- Læs mere om Hans Christian Jochimsen
+        </a>
+      </div>
+      <h2>HOLDOVERSIGT</h2>
 
       <Footer />
     </main>
