--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,22 +47,24 @@ import '../styles/index.css';
       </div>
       <div class="hanscjafsnit">
         <img src="/src/assets/hanscj.png" alt="hanscj" />
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit voluptatibus
-          molestias vel debitis nisi commodi dolores quo tempore laudantium repellat. Expedita quos
-          unde modi aspernatur tempore. Corrupti exercitationem tempora itaque.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus accusantium laudantium
-          quibusdam asperiores, et explicabo architecto id excepturi qui molestias, vero voluptates
-          facere, suscipit unde saepe quas omnis iure tenetur pariatur doloribus deleniti amet
-          eligendi corporis? Ad adipisci hic porro. Quia placeat architecto, consectetur nam iste
-          cumque id iure ratione.
-        </p>
-        <h3>HANS CHRISTIAN JOCHIMSEN</h3>
-        <a href="https://www.gospelnet.dk/hans-christian-jochimsen/"
-          >- Læs mere om Hans Christian Jochimsen
-        </a>
+        <div>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit voluptatibus
+            molestias vel debitis nisi commodi dolores quo tempore laudantium repellat. Expedita
+            quos unde modi aspernatur tempore. Corrupti exercitationem tempora itaque.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus accusantium laudantium
+            quibusdam asperiores, et explicabo architecto id excepturi qui molestias, vero
+            voluptates facere, suscipit unde saepe quas omnis iure tenetur pariatur doloribus
+            deleniti amet eligendi corporis? Ad adipisci hic porro. Quia placeat architecto,
+            consectetur nam iste cumque id iure ratione.
+          </p>
+          <h3>HANS CHRISTIAN JOCHIMSEN</h3>
+          <a href="https://www.gospelnet.dk/hans-christian-jochimsen/"
+            >- Læs mere om Hans Christian Jochimsen
+          </a>
+        </div>
       </div>
       <h2>HOLDOVERSIGT</h2>
       <div class="holdene">
@@ -103,28 +105,32 @@ import '../styles/index.css';
         />
       </div>
       <div class="informationer">
-        <h2>OPTAGELSE OG TILMELDING</h2>
-        <hr />
-        <p>Der er ingen optagelseprøve - alle er velkommene!</p>
-        <p>1. Find det kor og hold som passer dig bedst.</p>
-        <p>2. Mød op - syng med - og se om det er noget for dig.</p>
-        <p>3. Forhåndstilmelding er ikke nødvendig.</p>
-        <h2>PRØVETIME</h2>
-        <hr />
-        <p>
-          Kom og syng med et par gange - helt uforpligtende og gratis - for at se om det er noget
-          for dig.
-        </p>
-        <h2>STUDERENDE, PENSIONIST OG FRIPLADS</h2>
-        <hr />
-        <p>
-          Der har altid været rabat i mine kor for studerende og pensionister. Denne rabat udvides
-          nu til også at gælde f.eks. arbejdsløse, mennesker på kontanthjælp eller i
-          ressourceforløb… og andre med en lidt mindre økonomi. Jeg tilbyder friplads til dig som er
-          presset HELT i bund, og som slet ikke har råd til at være med i et kor i efteråret! Hvis
-          det er din situation, så send mig en mail, og beskriv kort hvorfor du har behov for en
-          friplads
-        </p>
+        <div>
+          <h2>OPTAGELSE OG TILMELDING</h2>
+          <hr />
+          <p>Der er ingen optagelseprøve - alle er velkommene!</p>
+          <p>1. Find det kor og hold som passer dig bedst.</p>
+          <p>2. Mød op - syng med - og se om det er noget for dig.</p>
+          <p>3. Forhåndstilmelding er ikke nødvendig.</p>
+          <h2>PRØVETIME</h2>
+          <hr />
+          <p>
+            Kom og syng med et par gange - helt uforpligtende og gratis - for at se om det er noget
+            for dig.
+          </p>
+        </div>
+        <div>
+          <h2>STUDERENDE, PENSIONIST OG FRIPLADS</h2>
+          <hr />
+          <p>
+            Der har altid været rabat i mine kor for studerende og pensionister. Denne rabat udvides
+            nu til også at gælde f.eks. arbejdsløse, mennesker på kontanthjælp eller i
+            ressourceforløb… og andre med en lidt mindre økonomi. Jeg tilbyder friplads til dig som
+            er presset HELT i bund, og som slet ikke har råd til at være med i et kor i efteråret!
+            Hvis det er din situation, så send mig en mail, og beskriv kort hvorfor du har behov for
+            en friplads
+          </p>
+        </div>
       </div>
       <Footer />
     </main>
