--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -30,6 +30,9 @@ main {
   margin-left: 25px;
   margin-top: 20px;
   margin-right: 25px;
+  margin-bottom: 10px;
+  font-family: Helvetica, sans-serif;
+  font-size: medium;
 }
 
 .gospelikbh a {
@@ -44,6 +47,7 @@ main {
 .hanscjafsnit {
   background-image: url(/src/assets/hansbaggrund.png);
   background-repeat: no-repeat;
+  background-size: cover;
   margin: 50px;
   width: auto;
   height: auto;
@@ -62,7 +66,8 @@ main {
   padding-top: 20px;
   padding-bottom: 15px;
   font-family: Helvetica, sans-serif;
-  font-size: smaller;
+  font-size: medium;
+  font-weight: 200;
   color: white;
 }
 
@@ -71,7 +76,7 @@ main {
   font-family: 'Gabarito', sans-serif;
   margin-left: 65px;
   font-size: 4vw;
-  max-width: 65%;
+  max-width: 70%;
   margin-bottom: 5px;
 }
 
@@ -110,8 +115,41 @@ main {
   margin-left: 25px;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 750px) {
   .gospelikbh {
     display: grid;
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .hanscjafsnit {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+  }
+
+  .hanscjafsnit :last-child {
+    margin-top: 20px;
+  }
+
+  .holdene {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .holdene :last-child {
+    margin-top: 0px;
+  }
+
+  .tilmelding {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    height: 250px;
+    background-size: cover;
+  }
+
+  .informationer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: auto;
+    max-width: 900px;
+    margin: 0px 20px 0px 40px;
   }
 }
