--- a/src/pages/felleskab.astro
+++ b/src/pages/felleskab.astro
@@ -1,7 +1,9 @@
 ---
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import Anbefaling from '../components/Anbefaling.astro';
 import '../styles/style.css';
+import '../styles/fellesskab.css';
 ---
 
 <!doctype html>
@@ -22,7 +24,82 @@ import '../styles/style.css';
   <body>
     <main>
       <Header />
-
+      <div class="hero">
+        <img src="/src/assets/fellesskabhero.png" alt="heroimg" />
+      </div>
+      <h2>HVAD ER GOSPEL?</h2>
+      <img class="vector" src="/src/assets/vectorsort.svg" alt="vector" />
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad aliquam
+        in tenetur dolore sint accusamus saepe autem cumque ex eum asperiores nihil, unde
+        consectetur iure rem ut. Eaque eos sunt atque, reiciendis ipsa qui nesciunt accusamus,
+        pariatur dignissimos facilis, dolorem voluptatum. Voluptates dolores eos vitae quibusdam ut
+        iusto consequuntur possimus nobis officia voluptas similique quisquam doloremque quam magnam
+        facilis omnis obcaecati, quia neque nemo dolorem dolorum, eveniet incidunt. Eius culpa ipsa
+        aspernatur.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad aliquam
+        in tenetur dolore sint accusamus saepe autem cumque ex eum asperiores nihil, unde
+        consectetur iure rem ut.
+      </p>
+      <h2>HVEM ER MED TIL GOSPEL?</h2>
+      <img class="vector" src="/src/assets/vectorsort.svg" alt="vector" />
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad aliquam
+        in tenetur dolore sint accusamus saepe autem cumque ex eum asperiores nihil, unde
+        consectetur iure rem ut. Eaque eos sunt atque, reiciendis ipsa qui nesciunt accusamus,
+        pariatur dignissimos facilis, dolorem voluptatum. Voluptates dolores eos vitae quibusdam ut
+        iusto consequuntur possimus nobis officia voluptas similique quisquam doloremque quam magnam
+        facilis omnis obcaecati, quia neque nemo dolorem dolorum, eveniet incidunt. Eius culpa ipsa
+        aspernatur.
+      </p>
+      <div class="billederullen">
+        <div class="billederulle">
+          <img src="/src/assets/rulle1.png" alt="rulle1" />
+          <img src="/src/assets/rulle2.png" alt="rulle2" />
+          <img src="/src/assets/rulle3.png" alt="rulle3" />
+          <img src="/src/assets/rulle4.png" alt="rulle4" />
+          <img src="/src/assets/rulle5.png" alt="rulle5" />
+          <img src="/src/assets/rulle6.png" alt="rulle6" />
+        </div>
+      </div>
+      <h2>OVERVEJER DU AT STARTE?</h2>
+      <img class="vector" src="/src/assets/vectorsort.svg" alt="vector" />
+      <div class="anbefalinger">
+        <Anbefaling
+          navn="Johanne Burkhave"
+          alder="20 år"
+          link="https://www.gospelnet.dk/artikler/gospel-giver-faellesskabsfoelelse/"
+          anbimg="/src/assets/anbefaling1.png"
+          udtalelse="Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad aliquam in tenetur dolore sint accusamus saepe autem cumque ex eum asperiores nihil, unde consectetur iure rem ut."
+          overskrift="Gospel giver overskud til læsningen"
+        />
+        <Anbefaling
+          navn="Johanne Burkhave"
+          alder="20 år"
+          link="https://www.gospelnet.dk/artikler/gospel-giver-faellesskabsfoelelse/"
+          anbimg="/src/assets/anbefaling2.png"
+          udtalelse="Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad aliquam in tenetur dolore sint accusamus saepe autem cumque ex eum asperiores nihil, unde consectetur iure rem ut."
+          overskrift="Gospel giver overskud til læsningen"
+        />
+        <Anbefaling
+          navn="Johanne Burkhave"
+          alder="20 år"
+          link="https://www.gospelnet.dk/artikler/gospel-giver-faellesskabsfoelelse/"
+          anbimg="/src/assets/anbefaling3.png"
+          udtalelse="Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad aliquam in tenetur dolore sint accusamus saepe autem cumque ex eum asperiores nihil, unde consectetur iure rem ut."
+          overskrift="Gospel giver overskud til læsningen"
+        />
+        <Anbefaling
+          navn="Johanne Burkhave"
+          alder="20 år"
+          link="https://www.gospelnet.dk/artikler/gospel-giver-faellesskabsfoelelse/"
+          anbimg="/src/assets/anbefaling4.png"
+          udtalelse="Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad aliquam in tenetur dolore sint accusamus saepe autem cumque ex eum asperiores nihil, unde consectetur iure rem ut."
+          overskrift="Gospel giver overskud til læsningen"
+        />
+      </div>
       <Footer />
     </main>
   </body>
