responsiv fellesksba side

--- a/src/components/Anbefaling.astro
+++ b/src/components/Anbefaling.astro
@@ -60,5 +60,13 @@ const { navn, alder, link, anbimg, udtalelse, overskrift } = Astro.props;
   .anbefalingboks p {
     margin: 5px;
     padding: 20px;
+    font-family: 'Fira Sans', sans-serif;
+  }
+
+  .anbefalingboks a {
+    text-decoration: none;
+    color: red;
+    font-family: 'Fira Sans', sans-serif;
+    font-weight: 700;
   }
 </style>
