--- a/src/components/Hold.astro
+++ b/src/components/Hold.astro
@@ -66,7 +66,7 @@ const { holdnavn, linje1, linje2, linje3, logo, infohold, holdbillede } = Astro.
   }
 
   .adressenh p {
-    font-family: Helvetica, sans-serif;
+    font-family: 'Fira Sans', sans-serif;
     margin-top: 5px;
     font-size: smaller;
   }
@@ -75,7 +75,7 @@ const { holdnavn, linje1, linje2, linje3, logo, infohold, holdbillede } = Astro.
     color: white;
     margin: 20px 15px 0px 50px;
     padding-bottom: 20px;
-    font-family: Helvetica, sans-serif;
+    font-family: 'Fira Sans', sans-serif;
     font-weight: 200;
   }
 
