--- a/src/components/Tilmeld.astro
+++ b/src/components/Tilmeld.astro
@@ -30,6 +30,7 @@ const { holdnr, dag, holdnavn, tid } = Astro.props;
   .holdnr p {
     text-align: center;
     font-size: small;
+    font-family: 'Fira Sans', sans-serif;
   }
 
   .holdnr h2 {
@@ -50,6 +51,8 @@ const { holdnr, dag, holdnavn, tid } = Astro.props;
     border: red 2px solid;
     border-radius: 5px;
     padding: 5px;
+    font-size: small;
+    font-family: 'Fira Sans', sans-serif;
   }
 
   .holdnr a:hover {
