--- a/src/pages/felleskab.astro
+++ b/src/pages/felleskab.astro
@@ -27,33 +27,39 @@ import '../styles/fellesskab.css';
       <div class="hero">
         <img src="/src/assets/fellesskabhero.png" alt="heroimg" />
       </div>
-      <h2>HVAD ER GOSPEL?</h2>
-      <img class="vector" src="/src/assets/vectorsort.svg" alt="vector" />
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad aliquam
-        in tenetur dolore sint accusamus saepe autem cumque ex eum asperiores nihil, unde
-        consectetur iure rem ut. Eaque eos sunt atque, reiciendis ipsa qui nesciunt accusamus,
-        pariatur dignissimos facilis, dolorem voluptatum. Voluptates dolores eos vitae quibusdam ut
-        iusto consequuntur possimus nobis officia voluptas similique quisquam doloremque quam magnam
-        facilis omnis obcaecati, quia neque nemo dolorem dolorum, eveniet incidunt. Eius culpa ipsa
-        aspernatur.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad aliquam
-        in tenetur dolore sint accusamus saepe autem cumque ex eum asperiores nihil, unde
-        consectetur iure rem ut.
-      </p>
-      <h2>HVEM ER MED TIL GOSPEL?</h2>
-      <img class="vector" src="/src/assets/vectorsort.svg" alt="vector" />
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad aliquam
-        in tenetur dolore sint accusamus saepe autem cumque ex eum asperiores nihil, unde
-        consectetur iure rem ut. Eaque eos sunt atque, reiciendis ipsa qui nesciunt accusamus,
-        pariatur dignissimos facilis, dolorem voluptatum. Voluptates dolores eos vitae quibusdam ut
-        iusto consequuntur possimus nobis officia voluptas similique quisquam doloremque quam magnam
-        facilis omnis obcaecati, quia neque nemo dolorem dolorum, eveniet incidunt. Eius culpa ipsa
-        aspernatur.
-      </p>
+      <div class="startfelles">
+        <div>
+          <h2>HVAD ER GOSPEL?</h2>
+          <img class="vector" src="/src/assets/vectorsort.svg" alt="vector" />
+          <p class="fellesp">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad
+            aliquam in tenetur dolore sint accusamus saepe autem cumque ex eum asperiores nihil,
+            unde consectetur iure rem ut. Eaque eos sunt atque, reiciendis ipsa qui nesciunt
+            accusamus, pariatur dignissimos facilis, dolorem voluptatum. Voluptates dolores eos
+            vitae quibusdam ut iusto consequuntur possimus nobis officia voluptas similique quisquam
+            doloremque quam magnam facilis omnis obcaecati, quia neque nemo dolorem dolorum, eveniet
+            incidunt. Eius culpa ipsa aspernatur.
+          </p>
+          <p class="fellesp">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad
+            aliquam in tenetur dolore sint accusamus saepe autem cumque ex eum asperiores nihil,
+            unde consectetur iure rem ut.
+          </p>
+        </div>
+        <div>
+          <h2>HVEM ER MED TIL GOSPEL?</h2>
+          <img class="vector" src="/src/assets/vectorsort.svg" alt="vector" />
+          <p class="fellesp">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad
+            aliquam in tenetur dolore sint accusamus saepe autem cumque ex eum asperiores nihil,
+            unde consectetur iure rem ut. Eaque eos sunt atque, reiciendis ipsa qui nesciunt
+            accusamus, pariatur dignissimos facilis, dolorem voluptatum. Voluptates dolores eos
+            vitae quibusdam ut iusto consequuntur possimus nobis officia voluptas similique quisquam
+            doloremque quam magnam facilis omnis obcaecati, quia neque nemo dolorem dolorum, eveniet
+            incidunt. Eius culpa ipsa aspernatur.
+          </p>
+        </div>
+      </div>
       <div class="billederullen">
         <div class="billederulle">
           <img src="/src/assets/rulle1.png" alt="rulle1" />
@@ -64,8 +70,19 @@ import '../styles/fellesskab.css';
           <img src="/src/assets/rulle6.png" alt="rulle6" />
         </div>
       </div>
-      <h2>OVERVEJER DU AT STARTE?</h2>
-      <img class="vector" src="/src/assets/vectorsort.svg" alt="vector" />
+      <div class="odas">
+        <h2>OVERVEJER DU AT STARTE?</h2>
+        <img class="vector" src="/src/assets/vectorsort.svg" alt="vector" />
+        <p class="fellesp">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad
+          aliquam in tenetur dolore sint accusamus saepe autem cumque ex eum asperiores nihil, unde
+          consectetur iure rem ut. Eaque eos sunt atque, reiciendis ipsa qui nesciunt accusamus,
+          pariatur dignissimos facilis, dolorem voluptatum. Voluptates dolores eos vitae quibusdam
+          ut iusto consequuntur possimus nobis officia voluptas similique quisquam doloremque quam
+          magnam facilis omnis obcaecati, quia neque nemo dolorem dolorum, eveniet incidunt. Eius
+          culpa ipsa aspernatur.
+        </p>
+      </div>
       <div class="anbefalinger">
         <Anbefaling
           navn="Johanne Burkhave"
@@ -99,6 +116,9 @@ import '../styles/fellesskab.css';
           udtalelse="Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero blanditiis laborum ad aliquam in tenetur dolore sint accusamus saepe autem cumque ex eum asperiores nihil, unde consectetur iure rem ut."
           overskrift="Gospel giver overskud til læsningen"
         />
+      </div>
+      <div class="hero">
+        <img src="/src/assets/slutherofellesskab.png" alt="heroimg" />
       </div>
       <Footer />
     </main>
