--- a/src/styles/fellesskab.css
+++ b/src/styles/fellesskab.css
@@ -15,15 +15,6 @@ video {
   display: block;
 }
 
-/* p {
-  font-family: Helvetica, sans-serif;
-  font-size: medium;
-  margin-left: 25px;
-  margin-top: 20px;
-  margin-right: 25px;
-  margin-bottom: 10px;
-} */
-
 .vector {
   margin-left: 20px;
 }
@@ -56,8 +47,26 @@ video {
   align-self: center;
 }
 
+.fellesp {
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 10px;
+  font-family: 'Fira Sans', sans-serif;
+}
+
+.odas {
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @media screen and (min-width: 750px) {
   .anbefalinger {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .startfelles {
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
