--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -31,7 +31,7 @@ main {
   margin-top: 20px;
   margin-right: 25px;
   margin-bottom: 10px;
-  font-family: Helvetica, sans-serif;
+  font-family: 'Fira Sans', sans-serif;
   font-size: medium;
 }
 
@@ -65,7 +65,7 @@ main {
   margin-right: 20px;
   padding-top: 20px;
   padding-bottom: 15px;
-  font-family: Helvetica, sans-serif;
+  font-family: 'Fira Sans', sans-serif;
   font-size: medium;
   font-weight: 200;
   color: white;
@@ -113,6 +113,7 @@ main {
 
 .informationer p {
   margin-left: 25px;
+  font-family: 'Fira Sans', sans-serif;
 }
 
 @media screen and (min-width: 750px) {
