--- a/src/pages/felleskab.astro
+++ b/src/pages/felleskab.astro
@@ -24,6 +24,8 @@ import '../styles/fellesskab.css';
   <body>
     <main>
       <Header />
+      <h1>FÆLLESSKAB</h1>
+      <hr />
       <div class="hero">
         <img src="/src/assets/fellesskabhero.png" alt="heroimg" />
       </div>
