--- a/src/pages/kalender.astro
+++ b/src/pages/kalender.astro
@@ -1,6 +1,7 @@
 ---
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import Begivenhed from '../components/Begivenhed.astro';
 import '../styles/style.css';
 ---
 
@@ -22,6 +23,15 @@ import '../styles/style.css';
   <body>
     <main>
       <Header />
+      <h1>KALENDER</h1>
+      <hr />
+      <div class="kalenderen">
+        <Begivenhed />
+        <Begivenhed />
+        <Begivenhed />
+        <Begivenhed />
+        <Begivenhed />
+      </div>
 
       <Footer />
     </main>
