tilmeldingside med repsonsivt layout og contentiedible feature

--- a/src/components/Tilmeld.astro
+++ b/src/components/Tilmeld.astro
@@ -58,5 +58,6 @@ const { holdnr, dag, holdnavn, tid } = Astro.props;
   .holdnr a:hover {
     color: white;
     background-color: red;
+    cursor: pointer;
   }
 </style>
